@RafaelCandeias00 [Task: arrumando Startup e appsettings] {09/09/2022 20:50}

--- a/MISS/MissAPI/appsettings.json
+++ b/MISS/MissAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStringsDev": {
+    "DefaultConnection": "Server=localhost; Initial Catalog=db_MISS; Trusted_Connection=True;"
+  }
 }
