@RafaelCandeias00 [Task: add segurança e documentação] {15/09/2022 22:41}

--- a/MISS/MissAPI/appsettings.json
+++ b/MISS/MissAPI/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStringsDev": {
     "DefaultConnection": "Server=localhost; Initial Catalog=db_MISS; Trusted_Connection=True;"
+  },
+  "Settings": {
+    "Secret": "fedaf7d8863b48e197b9287d492b708e"
   }
 }
